--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>bmaciag.de</title>
+</head>
+<body>
+    <h2>For app support: 
+    <a href="mailto:bmaciag@outlook.de?subject=Support-Request">
+        Send a support request    
+    </a>
+    </h2>
+    </body>
+</html>
